# flextrek

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: publish-crate-lib.yml
example/: get_explorer_location.rs  get_explorer_selected_file.rs
src/: get_explorer_location.rs  get_explorer_selected_file.rs  hotkey.rs  lib.rs
